# nesbrasa

./: README.md  meson.build
src/: cartucho.c  cartucho.cpp  cartucho.h  cartucho.hpp  controle.cpp  controle.hpp  cores.cpp  cores.hpp  cpu.c  cpu.cpp  cpu.h  cpu.hpp  instrucao.c  instrucao.cpp  instrucao.h  instrucao.hpp  lista_p.c  lista_p.h  lista_ptr.c  lista_ptr.h  mapeador.c  mapeador.h  mapeador.hpp  memoria.c  memoria.cpp  memoria.h  memoria.hpp  meson.build  nes.h  nesbrasa.c  nesbrasa.cpp  nesbrasa.h  nesbrasa.hpp  nrom.cpp  nrom.hpp  ppu.c  ppu.cpp  ppu.h  ppu.hpp  rom.c  (+6 more)
src/mapeadores/: cartucho.cpp  cartucho.hpp  mapeador.hpp  nrom.c  nrom.cpp  nrom.h  nrom.hpp
test/: jmp_bug.c  jmp_bug.cpp  meson.build  nesbrasatest.c
